# mindandiron

./: .gitignore  README.md
arduino/arduino1/: arduino1.ino  battery_includes.h  battery_tracking.ino  computer_communication.ino  rc_includes.h  rc_monitoring.ino
arduino/tests/: read_write_serial.py  test_camera_servo.py
arduino/tests/computer_to_arduino_test/: computer_to_arduino_test.ino
gazebo/: CMakeLists.txt  README.md  april.cpp  april.h  camera.cpp  gazebo.cc  gazebo2.cpp  gazebo2.h  kratos.cc  kratos.world  model.config  model.sdf  msgpack.cpp  msgpack.h  odometry.cpp  odometry.h  park_viewer.cpp  pcl_test.cpp  pointcloud.cpp  pointcloud.h  realrobot.cpp  realrobot.h  robot.cc  robot.h  state.cc  state.h  teensy.h  telemetry.cpp  telemetry.h  trajectory.cpp  trajectory.h  util.h
gazebo/data/: gazebo_2015_05_25_21_18_05.db
gazebo/lib/: libusb-1.0.so.0.1.0
gazebo/nzmqt/: impl.hpp  nzmqt.cpp  nzmqt.hpp
gazebo/robot/: CMakeLists.txt  camera.cpp  camera.h  gazeborobot.cpp  gazeborobot.h  log.cpp  main.cpp  realrobot.cpp  realrobot.h  robot.cpp  robot.h  state.cpp  state.h  teensey.cpp  teensey.h  trajectory2.cpp  trajectory2.h
gazebo/robot/state/: return.cpp  sample.cpp  state.cpp  state.h  state2.cpp
gazebo/telemetry/: CMakeLists.txt  map.cpp  pointcloud.cpp  pointcloud.h  qr.cpp  qr.h  telemetry.cpp  telemetry.h
models/: Prometheus.dae  course_1.DAE  kratos.world  kratos2.dae  kratos_flat.world  kratos_plataform4.dae  model.sdf  model2.sdf
sensor_analysis/: NASA_install_steps
sensor_analysis/decawave/: data_12_11_14.txt  data_12_15_14.txt  decawave_testing.py  store_data_12_11_14.py  store_data_12_15_14.py
sensor_analysis/decawave/ethzurich/: Acc_Gyr_logging_test.ino  DW1000.cpp  DW1000.h  MMRanging.cpp  MMRanging.h  main.cpp  questions_for_research.txt  questions_for_research.txt~
sensor_analysis/decawave/ethzurich/DW1000/: DW1000.ino  MMRanging.h  print.cpp  print.h
sensor_analysis/decawave/ethzurich/altered-DW1000/: DW1000.ino
sensor_analysis/decawave/ethzurich/arduino_test/: DW1000.h  arduino_test.ino
setup/: 99-kratos-devices.rules  setup.sh
teensy/teensy1/: accelerometer.c  accelerometer.h  accelerometer.ino  collector_sorter_control.ino  collector_sorter_includes.h  computer_communication.ino  measure_wheel_velocity.ino  rc_control.ino  rc_includes.h  teensy1.ino  wheel_PID.h  wheel_PID.ino
teensy/teensy2/: battery_includes.h  battery_tracking.ino  camera_servo_includes.h  computer_communication.ino  teensy2.ino
teensy/tests/: read_write_serial.py
teensy/tests/computer_to_arduino_test/: computer_to_arduino_test.ino
teensy/tests/test_encoders/: test_encoders.ino
